# Disk-Analyzer

./: CMakeLists.txt  CMakeLists.txtZone.Identifier  da.c
Daemon/: Analyzer.c  Daemon.c  EventManager.c  EventManager.h  ShmManager.c  ShmManager.h  TaskManager.c  TaskManager.h  Utility.c  Utility.h
DaemonData/: Analysis_1.txt  DaemonEvent.txt  DaemonStatus.txt  Status_1.txt
Exports/: ExportAnalysis_1.txt  ExportAnalysis_2.txt
